1998-11-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi.c: got rid of all the DnD stuff and implemented my own
	method for dragging notebook pages around. it works much better now
	and doesn't confuse the children any more.
	* gnome-mdi.h (struct _GnomeMDI): new mebers signal_id and in_drag
	to serve the above changes ;).

1998-11-16  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c: Applied patch by Samuel Solon
	<ssolon@usa.net> to make the icon list have hadjustment and
	vadjustment object arguments, to act in the same way as GtkCList.
	You now have to insert the GnomeIconList inside a
	GtkScrolledWindow.

Sat Nov 14 14:55:48 1998  John Ellis  <johne@bellatlantic.net>

	* gone-icon-sel.c(gnome_icon_selection_init): Add scrolled window
	for the clist of icons.

Fri Nov 13 11:29:22 1998  Owen Taylor  <otaylor@redhat.com>

	* gnome-rootwin.c: Include gdkx.h not gdkprivate.h

1998-11-11  Havoc Pennington  <hp@pobox.com>

	* gnome-geometry.c (gnome_geometry_string): Use
	gdk_window_get_root_origin().

1998-11-10  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-popup-menu.c (popup_connect_func): Only connect to the
	signal if the callback is not NULL.
	(gnome_popup_menu_do_popup): If the event is NULL, use button 0
	and GDK_CURRENT_TIME to pop up the menu.
	(gnome_popup_menu_do_popup_modal): New public function to run a
	popup menu modally, and return the index of the selected item.

	* gnome-app-helper.c (do_ui_signal_connect): Only connect to the
	signal if the callback is not NULL.

Wed Nov  4 11:31:57 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk-socket.c (gtk_socket_filter_func): Call 
	gdk_window_destroy_notify() on a DestroyNotify, so
	that the window gets removed from the XID table.

1998-11-09  Jeff Garzik  <jgarzik@pobox.com>

        * libgnomeui/Makefile.am,
          libgnomeui/gnome-dateedit.c, libgnomeui/gtkcalendar.c,
          libgnomeui/gtkcalendar.h, libgnomeui/libgnomeui.h:
